--- a/code/src/css/main.less
+++ b/code/src/css/main.less
@@ -1,7 +1,10 @@
+@import "./mixins.less";
 @import "./variable.less";
 @import "./normalize.less";
 @import "./base.less";
 @import "./utils.less";
+
+@import "./input.less";
 
 // Grids
 @import "./grids.less";
