--- a/code/src/css/mixins.less
+++ b/code/src/css/mixins.less
@@ -25,13 +25,13 @@
         margin-left: @gutter * @factor;
     }
     .mb@{factor} {
-        margin-left: @gutter * @factor;
+        margin-bottom: @gutter * @factor;
     }
     .mr@{factor} {
-        margin-left: @gutter * @factor;
+        margin-right: @gutter * @factor;
     }
     .mt@{factor} {
-        margin-left: @gutter * @factor;
+        margin-top: @gutter * @factor;
     }
 }
 
