--- a/code/src/css/variable.less
+++ b/code/src/css/variable.less
@@ -13,3 +13,39 @@
 @skin-class-prefix: skin;
 @state-class-prefix: state;
 
+/* =========
+   Inputs
+   ========= */
+@input-background-color: #FFFFFF;
+@input-border-color: 1px solid rgba(0, 0, 0, 0.15);
+@input-text-color: rgba(0, 0, 0, 0.7);
+@input-placeholder-color: #BBBBBB;
+// tab color, webkit only
+@input-tap-color: rgba(255, 255, 255, 0);
+
+// active state
+@input-active-border-color: rgba(0, 0, 0, 0.3);
+@input-active-background-color: #FAFAFA;
+// focus state
+@input-focus-border-color: rgba(0, 0, 0, 0.2);
+@input-focus-background-color: rgba(0, 0, 0, 0.85);
+// error state
+@input-error-border-color: #E7BEBE;
+@input-error-background-color: #FFFAFA;
+@input-error-text-color: #D95C5C;
+@input-error-placeholder-color: red;
+// disabled state
+@input-disabled-border-color: rgba(0, 0, 0, 0.2);
+@input-disabled-background-color: #eee;
+
+/* =========
+   Buttons
+   ========= */
+@button-text-IE8-color: #444;
+@button-text-color: #fff;
+@button-background-color: #bdc3c7;
+
+// hover
+@button-hover-background-color: #cacfd2;
+// active
+@button-active-background-color: #a1a6a9;
