--- a/code/src/css/buttons.less
+++ b/code/src/css/buttons.less
@@ -35,32 +35,32 @@ https://github.com/yui/@{ui-class-prefix}/blob/master/LICENSE.md
     *font-size: 90%; /*IE 6/7 - To reduce IE's oversized button text*/
     *overflow: visible; /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
     padding: 0.5em 1em;
-    color: #444; /* rgba not supported (IE 8) */
-    color: rgba(0, 0, 0, 0.80); /* rgba supported */
-    *color: #444; /* IE 6 & 7 */
+    color: @button-text-IE8-color; /* rgba not supported (IE 8) */
+    color: @button-text-color; /* rgba supported */
+    *color: @button-text-IE8-color; /* IE 6 & 7 */
     border: 1px solid #999;  /*IE 6/7/8*/
     border: none rgba(0, 0, 0, 0);  /*IE9 + everything else*/
-    background-color: #E6E6E6;
+    background-color: @button-background-color;
     text-decoration: none;
     border-radius: 2px;
+}
+
+.@{ui-class-prefix}-button.icon {
+    padding: 0.5em;
 }
 
 .@{ui-class-prefix}-button-hover,
 .@{ui-class-prefix}-button:hover,
 .@{ui-class-prefix}-button:focus {
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000',GradientType=0);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0,0,0, 0.05)), to(rgba(0,0,0, 0.10)));
-    background-image: -webkit-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
-    background-image: -moz-linear-gradient(top, rgba(0,0,0, 0.05) 0%, rgba(0,0,0, 0.10));
-    background-image: -o-linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
-    background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
+    background: @button-hover-background-color;
 }
 .@{ui-class-prefix}-button:focus {
     outline: 0;
 }
 .@{ui-class-prefix}-button-active,
-.@{ui-class-prefix}-button:active {
-    box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
+.@{ui-class-prefix}-button:active, 
+.@{ui-class-prefix}-button.active {
+    background: @button-active-background-color;
 }
 
 .@{ui-class-prefix}-button[disabled],
