--- a/code/src/css/grids.less
+++ b/code/src/css/grids.less
@@ -69,7 +69,7 @@ Resets the font family back to the OS/browser's default sans-serif font,
 this the same font stack that Normalize.css sets for the `body`.
 */
 .@{ui-class-prefix}-g [class *= "@{ui-class-prefix}-u"] {
-    font-family: sans-serif;
+    font-family: @default-font-family;
 }
 
 .@{ui-class-prefix}-u-1,
