--- a/code/src/css/main.css
+++ b/code/src/css/main.css
@@ -1,3 +1,9 @@
+/* =========
+   Inputs
+   ========= */
+/* =========
+   Buttons
+   ========= */
 /*! normalize.css v1.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
@@ -475,6 +481,12 @@ html {
   font-family: Arial, Helvetica, sans-serif;
   background: #ffffff;
 }
+button[disabled],
+html input[disabled],
+ui-disabled {
+  cursor: not-allowed;
+  opacity: 1;
+}
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -562,13 +574,13 @@ html {
   margin-left: 10px;
 }
 .mb1 {
-  margin-left: 10px;
+  margin-bottom: 10px;
 }
 .mr1 {
-  margin-left: 10px;
+  margin-right: 10px;
 }
 .mt1 {
-  margin-left: 10px;
+  margin-top: 10px;
 }
 .m2 {
   margin: 20px;
@@ -577,13 +589,13 @@ html {
   margin-left: 20px;
 }
 .mb2 {
-  margin-left: 20px;
+  margin-bottom: 20px;
 }
 .mr2 {
-  margin-left: 20px;
+  margin-right: 20px;
 }
 .mt2 {
-  margin-left: 20px;
+  margin-top: 20px;
 }
 .m3 {
   margin: 30px;
@@ -592,13 +604,13 @@ html {
   margin-left: 30px;
 }
 .mb3 {
-  margin-left: 30px;
+  margin-bottom: 30px;
 }
 .mr3 {
-  margin-left: 30px;
+  margin-right: 30px;
 }
 .mt3 {
-  margin-left: 30px;
+  margin-top: 30px;
 }
 .no-ml {
   margin-left: 0 !important;
@@ -631,6 +643,257 @@ html {
 }
 .pull-right {
   float: right;
+}
+/*
+ * # Semantic - Input
+ * http://github.com/jlukic/semantic-ui/
+ *
+ *
+ * Copyright 2013 Contributors
+ * Released under the MIT license
+ * http://opensource.org/licenses/MIT
+ *
+ */
+/*******************************
+           Standard
+*******************************/
+/*--------------------
+        Inputs
+---------------------*/
+.ui.input {
+  display: inline-block;
+  position: relative;
+  color: rgba(0, 0, 0, 0.7);
+}
+.ui.input input {
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0em;
+  padding: 0.65em 1em;
+  font-size: 1em;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  outline: none;
+  color: rgba(0, 0, 0, 0.7);
+  border-radius: 0.3125em;
+  -webkit-transition: background-color 0.3s ease-out, -webkit-box-shadow 0.2s ease, border-color 0.2s ease;
+  -moz-transition: background-color 0.3s ease-out, box-shadow 0.2s ease, border-color 0.2s ease;
+  transition: background-color 0.3s ease-out, box-shadow 0.2s ease, border-color 0.2s ease;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
+/*--------------------
+      Placeholder
+---------------------*/
+/* browsers require these rules separate */
+.ui.input::-webkit-input-placeholder {
+  color: #bbbbbb;
+}
+.ui.input::-moz-placeholder {
+  color: #bbbbbb;
+}
+/*******************************
+            States
+*******************************/
+/*--------------------
+        Active
+---------------------*/
+.ui.input input:active,
+.ui.input.down input {
+  border-color: rgba(0, 0, 0, 0.3);
+  background-color: #fafafa;
+}
+/*--------------------
+        Loading
+---------------------*/
+.ui.loading.input > .icon {
+  background: url(../images/loader-mini.gif) no-repeat 50% 50%;
+}
+.ui.loading.input > .icon:before,
+.ui.loading.input > .icon:after {
+  display: none;
+}
+/*--------------------
+        Focus
+---------------------*/
+.ui.input.focus input,
+.ui.input input:focus {
+  border-color: rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.85);
+}
+/*--------------------
+        Error
+---------------------*/
+.ui.input.error input {
+  background-color: #fffafa;
+  border-color: #e7bebe;
+  color: #d95c5c;
+}
+/* Error Placeholder */
+.ui.input.error input ::-webkit-input-placeholder {
+  color: #ff0000;
+}
+.ui.input.error input ::-moz-placeholder {
+  color: #ff0000;
+}
+.ui.input.error input :focus::-webkit-input-placeholder {
+  color: #ff0000;
+}
+.ui.input.error input :focus::-moz-placeholder {
+  color: #ff0000;
+}
+/*--------------------
+        Disabled
+---------------------*/
+.ui.input.disabled input,
+.ui.input input[disabled] {
+  background-color: #eeeeee;
+  border-color: rgba(0, 0, 0, 0.2);
+}
+/*******************************
+           Variations
+*******************************/
+/*--------------------
+      Transparent
+---------------------*/
+.ui.transparent.input input {
+  border: none;
+  background-color: transparent;
+}
+/*--------------------
+         Icon
+---------------------*/
+.ui.icon.input > .icon {
+  cursor: default;
+  position: absolute;
+  opacity: 0.5;
+  top: 0px;
+  right: 0px;
+  margin: 0em;
+  width: 2.6em;
+  height: 100%;
+  padding-top: 0.82em;
+  text-align: center;
+  border-radius: 0em 0.3125em 0.3125em 0em;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: opacity 0.3s ease-out;
+  -moz-transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out;
+}
+.ui.icon.input > .link.icon {
+  cursor: pointer;
+}
+.ui.icon.input input {
+  padding-right: 3em !important;
+}
+.ui.icon.input > .circular.icon {
+  top: 0.35em;
+  right: 0.5em;
+}
+/* Left Side */
+.ui.left.icon.input > .icon {
+  right: auto;
+  left: 1px;
+  border-radius: 0.3125em 0em 0em 0.3125em;
+}
+.ui.left.icon.input > .circular.icon {
+  right: auto;
+  left: 0.5em;
+}
+.ui.left.icon.input > input {
+  padding-left: 3em !important;
+  padding-right: 1.2em !important;
+}
+/* Focus */
+.ui.icon.input > input:focus ~ .icon {
+  opacity: 1;
+}
+/*--------------------
+        Labeled
+---------------------*/
+.ui.labeled.input .corner.label {
+  font-size: 0.7em;
+  border-radius: 0 0.3125em;
+}
+.ui.labeled.input .left.corner.label {
+  border-radius: 0.3125em 0;
+}
+.ui.labeled.input input {
+  padding-right: 2.5em !important;
+}
+/* Spacing with corner label */
+.ui.labeled.icon.input:not(.left) > input {
+  padding-right: 3.25em !important;
+}
+.ui.labeled.icon.input:not(.left) > .icon {
+  margin-right: 1.25em;
+}
+/*--------------------
+        Action
+---------------------*/
+.ui.action.input {
+  display: table;
+}
+.ui.action.input > input {
+  display: table-cell;
+  border-top-right-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
+  border-right: none;
+}
+.ui.action.input > .button,
+.ui.action.input > .buttons {
+  display: table-cell;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  white-space: nowrap;
+}
+.ui.action.input > .button > .icon,
+.ui.action.input > .buttons > .button > .icon {
+  display: inline;
+  vertical-align: top;
+}
+.ui.fluid.action.input {
+  display: table;
+  width: 100%;
+}
+.ui.fluid.action.input > .button {
+  width: 0.01%;
+}
+/*--------------------
+        Fluid
+---------------------*/
+.ui.fluid.input {
+  display: block;
+}
+/*--------------------
+        Size
+---------------------*/
+.ui.mini.input {
+  font-size: 0.8125em;
+}
+.ui.small.input {
+  font-size: 0.875em;
+}
+.ui.input {
+  font-size: 1em;
+}
+.ui.large.input {
+  font-size: 1.125em;
+}
+.ui.big.input {
+  font-size: 1.25em;
+}
+.ui.huge.input {
+  font-size: 1.375em;
+}
+.ui.massive.input {
+  font-size: 1.5em;
 }
 /*!
 Pure v0.5.0
@@ -700,7 +963,7 @@ Resets the font family back to the OS/browser's default sans-serif font,
 this the same font stack that Normalize.css sets for the `body`.
 */
 .ui-g [class*="ui-u"] {
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .ui-u-1,
 .ui-u-1-1,
@@ -922,36 +1185,35 @@ https://github.com/yui/@{ui-class-prefix}/blob/master/LICENSE.md
   *overflow: visible;
   /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
   padding: 0.5em 1em;
-  color: #444;
+  color: #444444;
   /* rgba not supported (IE 8) */
-  color: rgba(0, 0, 0, 0.8);
+  color: #ffffff;
   /* rgba supported */
-  *color: #444;
+  *color: #444444;
   /* IE 6 & 7 */
   border: 1px solid #999;
   /*IE 6/7/8*/
   border: none rgba(0, 0, 0, 0);
   /*IE9 + everything else*/
-  background-color: #E6E6E6;
+  background-color: #bdc3c7;
   text-decoration: none;
   border-radius: 2px;
+}
+.ui-button.icon {
+  padding: 0.5em;
 }
 .ui-button-hover,
 .ui-button:hover,
 .ui-button:focus {
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000', GradientType=0);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), color-stop(40%, rgba(0, 0, 0, 0.05)), to(rgba(0, 0, 0, 0.1)));
-  background-image: -webkit-linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1));
-  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0.1));
-  background-image: -o-linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1));
-  background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.1));
+  background: #cacfd2;
 }
 .ui-button:focus {
   outline: 0;
 }
 .ui-button-active,
-.ui-button:active {
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
+.ui-button:active,
+.ui-button.active {
+  background: #a1a6a9;
 }
 .ui-button[disabled],
 .ui-button-disabled,
