--- a/code/src/css/mixins.less
+++ b/code/src/css/mixins.less
@@ -35,6 +35,25 @@
     }
 }
 
+// border radius
+.border-top-radius(@radius) {
+  border-top-right-radius: @radius;
+   border-top-left-radius: @radius;
+}
+.border-right-radius(@radius) {
+  border-bottom-right-radius: @radius;
+     border-top-right-radius: @radius;
+}
+.border-bottom-radius(@radius) {
+  border-bottom-right-radius: @radius;
+   border-bottom-left-radius: @radius;
+}
+.border-left-radius(@radius) {
+  border-bottom-left-radius: @radius;
+     border-top-left-radius: @radius;
+}
+
+
 // Framework grid generation
 //
 // Used only by Bootstrap to generate the correct number of grid classes given
